# spotify-agent

./: .gitignore  README.md  agent_script.py  app.py  backend.py  mcp_test.py  pyproject.toml  refresh.py  st_callable_util.py  to-implement.md
instructions/: week_one.md  week_one.md.new  week_three.md  week_two.md
